fixed contact form alignment

--- a/html/lizdeanconsultancy.co.uk/assets/scss/styles.scss
+++ b/html/lizdeanconsultancy.co.uk/assets/scss/styles.scss
@@ -1089,6 +1089,11 @@ nav {
   }
   // h1 {color: purple;}
 
+  .contactForm {
+    padding: 10px 50px 25px 7px;
+    margin: auto;
+  }
+
 } 
 /* PHONE LANDSCAPE END
 ==================================== */
@@ -1142,6 +1147,12 @@ and (max-width: $breakpointTinyMin)
   .facebook-word {
     display: inline;
   }
+
+  .contactForm {
+    padding: 10px 50px 25px 0px;
+    margin: auto;
+  }
+
 }
 /* PHONE PORTRAIT END
 ==================================== */
